--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
-<body>
+    <script>
+        window.onload = function() {
+            location.href = "https://www.google.com/";
+            }
+    </script>
+    <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+        <h1>My First Heading</h1>
+        <p>My first paragraph.</p>
 
-</body>
+    </body>
 </html>
