Change to Galaxy store.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <script>
         window.onload = function() {
-            location.href = "https://www.google.com/";
+            location.href = "https://galaxystore.samsung.com/detail/com.gameloft.android.SAMS.GloftWPSS";
             }
     </script>
     <body>
