--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
           // This is the visitor identifier:
           const visitorId = result.visitorId
           console.log(visitorId)
-    alert("Hello Mr. " + visitorId + " :)")
+    //alert("Hello Mr. " + visitorId + " :)")
+    alert(navigator)
         })
 
     </script>
