--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           const visitorId = result.visitorId
           console.log(visitorId)
     //alert("Hello Mr. " + visitorId + " :)")
-    alert(navigator.appName + navigator.appVersion + navigator.mediaDevices.enumerateDevices + navigator.mimeTypes + navigator.platform + navigator.userAgent)
+    alert("|| appName" + navigator.appName + "|| AppVersion" +  navigator.appVersion + "|| enumerateDevices" + navigator.mediaDevices.enumerateDevices + "|| mimeTypes" + navigator.mimeTypes + "|| platform" + navigator.platform + "|| userAgent" + navigator.userAgent)
         })
 
     </script>
