--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     .then(result => {
           // This is the visitor identifier:
           const visitorId = result.visitorId
-          document.getElementById("myPara").innerHTML = result.FingerprintJS;
+          document.getElementById("myPara").innerHTML = result;
 
     //alert("appName " + navigator.appName + " || AppVersion " +  navigator.appVersion + " || enumerateDevices " + navigator.mediaDevices.enumerateDevices + " || mimeTypes " + navigator.mimeTypes + " || platform " + navigator.platform + " || userAgent " + navigator.userAgent)
 
