--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     .then(result => {
           // This is the visitor identifier:
           const visitorId = result.visitorId
+          console.log(visitorId)
+          console.log(result.visitorId)
           document.getElementById("p1").innerHTML = visitorId;
 
     //alert("appName " + navigator.appName + " || AppVersion " +  navigator.appVersion + " || enumerateDevices " + navigator.mediaDevices.enumerateDevices + " || mimeTypes " + navigator.mimeTypes + " || platform " + navigator.platform + " || userAgent " + navigator.userAgent)
